# llm-zoomcamp-2026

./: README.md  agents.ipynb  ingest.py  notebook.ipynb  pyproject.toml  raghelper.py
homework/: homework_module_2.ipynb  module_01.ipynb
