[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.8.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
